--- a/html-basic.html
+++ b/html-basic.html
@@ -105,8 +105,8 @@
         <br>
         <dt>性别</dt>
             <dd>
-                <input type="checkbox" name="sex" value="male">男
-                <input type="checkbox" name="sex" value="female">女
+                <input type="radio" name="sex" value="male">男
+                <input type="radio" name="sex" value="female">女
             </dd>
         <dt>年龄</dt>
             <dd>
