--- a/html-basic.html
+++ b/html-basic.html
@@ -136,6 +136,7 @@
             </dd>
         <dt>照片</dt>
             <dd>
+                <input type="file" hidden name="avatar" id="avatar-upload">
                 <label for="avatar-upload">点我上传照片，我比文件上传按钮好看</label>
             </dd>
         <dt>自我介绍</dt>
