--- a/noi.html
+++ b/noi.html
@@ -1486,9 +1486,10 @@
                 console.log(0)
                 break
             }
-            if(c != 0){
-                console.log(c * j)
+            if(j == 0){
+                break
             }
+            console.log(c * j)
         } 
     }   
                 
@@ -1638,7 +1639,7 @@
                 
 </script>
 
-<script id="ch0105/44" xtype="OK">
+<script id="ch0105/44" type="OK">
 
     var n1 = +prompt('n')
     var cnt = 1
