--- a/paint.html
+++ b/paint.html
@@ -92,27 +92,17 @@
   }
 
   /* 画一条两个实点两个空点的虚线 */
-  var cnt = 0
   for (i = 0; i < 250; i++) {
-    if (cnt < 2) {
+    if (i % 4 < 2) {
       dot(31, i + 50, "blue")
-    }
-    cnt++
-    if(cnt == 4){
-      cnt = 0;
     } 
   }
 
   /* 画一条三个实点两个空点的虚线 */
-  cnt = 0
   for (i = 0; i < 250; i++) {
-    if (cnt < 3) {
+    if (i % 5 < 3) {
       dot(32, i + 50, "yellow")
     }
-    cnt++
-    if(cnt == 5){
-      cnt = 0;
-    } 
   }
 
   /* 画一条45度的斜线 */
@@ -123,7 +113,66 @@
   /* 画一条30度的斜线（与x轴的夹角呈30度） */
   var x = 100
   for (i = 0; i < 100; i++) {
-    dot((x - i) / 0.577, x - i, "black")
+    //dot((x - i) / 0.577, x - i, "black")
+    dot((x - i), (x - i) * 0.577, "black")
+  }
+
+  // 绘制原点到x,y的直线
+  function line(px, py) {
+    var k = py / px
+    if (k <= 0.5) {
+      for (var x = 0; x < px; x++){
+        var y = x * k
+        dot(x,y)
+      }
+    } else {
+      for (var y = 0; y < px; y++){
+        var x = y / k
+        dot(x,y)
+      }
+    }
+  }
+
+  // 绘制x1,y1到x2,y2的直线（只能用在第一象限）
+  function line2(x1, y1, x2, y2) {
+    var px = x2 - x1
+    var py = y2 - y1
+
+    var k = py / px
+    if (k <= 0.5) {
+      for (var x = 0; x < px; x++){
+        var y = x * k
+        dot(x + x1,y + y1)
+      }
+    } else {
+      for (var y = 0; y < px; y++){
+        var x = y / k
+        dot(x + x1,y + y1)
+      }
+    }
+  }
+
+  // 绘制x1,y1到x2,y2的直线（只能用在第一象限）
+  function line3(x1, y1, x2, y2) {
+    var k = (y2 - y1) / (x2 - x1)
+
+    if (k <= 0.5) {
+      var dx = x2 - x1  // x方向的跨度
+      var dy = y2 - y1  // y方向的跨度
+      var y0 = 0
+      for (var x = x1, y = y1; x < x2; x++){
+        dot(x,y)
+        y0 += dy
+        if (y0 > dx) {
+          y++
+          y0 -= dx
+        }
+      }
+    } else {
+      for (var y = y1, x = x1; y < y2; y++, x += 1 / k){
+        dot(x,y)
+      }
+    }
   }
 
   /* 画一条60度的斜线（与x轴的夹角呈60度） */
@@ -158,15 +207,128 @@
         * 一个半径为50像素
         * 一个半径为200像素
   */
+  function circle(cx, cy, r) {
+    var start = Math.ceil(r * Math.SQRT1_2) //Math.SQRT1_2 => the square root of 1/2
+    for (var x = 0; x <= start; x++) {
+      var y = Math.sqrt(r * r - x * x)
+      dot(x + cx, y + cy)
+      dot(x + cx, -y + cy)
+      dot(-x + cx, -y + cy)
+      dot(-x + cx, y + cy)
+      dot(y + cx, x + cy)
+      dot(y + cx, -x + cy)
+      dot(-y + cx, -x + cy)
+      dot(-y + cx, x + cy)
+    }
+  }
+
+  function circle2(cx, cy, r,color = "black") {
+    var x = 0
+    var y = r
+    while (x <= y) {
+      dot(x + cx,y + cy, color)
+      dot(x + cx,-y + cy, color)
+      dot(-x + cx,-y + cy, color)
+      dot(-x + cx,y + cy, color)
+      dot(y + cx,x + cy, color)
+      dot(y + cx,-x + cy, color)
+      dot(-y + cx,x + cy, color)
+      dot(-y + cx,-x + cy, color)
+      x++
+      var y1 = y
+      var y2 = y - 1
+      var r1 = x * x + y1 * y1
+      var r2 = x * x + y2 * y2
+      var rr = r * r
+
+      var d1 = Math.abs(r1-rr)
+      var d2 = Math.abs(r2-rr)
+
+      if (d1 < d2) {
+        y = y1
+      } else {
+        y = y2
+      }
+    }
+  }
   // 一个半径为50像素
-  x = 500
-  for (i = 0; i < 360; i++) {
-    dot( x + Math.cos(i) * 50, x + Math.sin(i) * 50, "red")
-  }
+  circle2(500,500,50)
   // 一个半径为200像素
-  for (i = 0; i < 360; i++) {
-    dot( x + Math.cos(i) * 200, x + Math.sin(i) * 200, "pink")
+  circle2(500,500,200)
+
+  // 画一个实心的圆
+  function circle3(cx, cy, r,color = "black") {
+    for (var i = r; i >= 0; i--) {
+      circle2(cx, cy, r - i)
+    }
   }
+
+  function circle4(cx, cy, r,color = "black") {
+    var x = 0
+    var y = r
+
+    while (x <= y) {
+
+      for (var i = 0; i <= r; i++) {
+        dot(x + cx,y + cy - i, color)
+        dot(x + cx,-y + cy + i, color)
+        dot(-x + cx,-y + cy + i, color)
+        dot(-x + cx,y + cy - i, color)
+        dot(y + cx - i,x + cy, color)
+        dot(y + cx - i,-x + cy, color)
+        dot(-y + cx + i,x + cy, color)
+        dot(-y + cx + i,-x + cy, color)
+      }
+      
+      x++
+      var y1 = y
+      var y2 = y - 1
+      var r1 = x * x + y1 * y1
+      var r2 = x * x + y2 * y2
+      var rr = r * r
+
+      var d1 = Math.abs(r1-rr)
+      var d2 = Math.abs(r2-rr)
+
+      if (d1 < d2) {
+        y = y1
+      } else {
+        y = y2
+      }
+    }
+  }
+
+  // 画一个实心的圆，半径至少为100像素
+  circle4(150,300,100,"pink")
+
+
+  // 画一个【大小位置都合适】的sin(x)的图像
+
+  function paintSin (cx, cy, length,color = "black") {
+    for (var i = 0; i <= length; i++) {
+      dot(cx * 5, cy + Math.sin(cx) * 5,"red")
+      line2(cx * 5, cy + Math.sin(cx) * 5, (cx + 1) * 5, cy + Math.sin(cx + 1) * 5)
+      cx++
+    }
+  }
+
+  paintSin(5,500,25)
+
+  /* 画出rgb色彩空间的某一面（尺寸要大于100x100）
+  * 如果做出上一题后，尝试将其每个点的坐标乘以一个矩阵（如(2,0,0,2)或(1,0.27得到新的位置，即绘制出被线性变换后的色彩空间某一面
+    可以考虑如下几种矩阵：
+     2 0
+     0 2
+     ------
+     1  0.27
+     0  1
+     ------
+     0.5    0.87
+     -0.87  0.5
+  * 画一个二阶贝塞尔曲线（即控制点一共三个）*/
+
+
+
 
 </script>
 </html>
