修改素数判断一处错误

--- a/noi.html
+++ b/noi.html
@@ -2273,7 +2273,7 @@
 
 </script>
 
-<script id="prime" type="OK">
+<script id="prime" xtype="OK">
     // 输入一个数，判断它是否是素数
     var num = +prompt("输入一个数")
 
@@ -2316,7 +2316,7 @@
         return true
     }
 
-    / 优化版2 只需要 判断x 是否能除尽 根号x 以内的素数
+    // 优化版2 只需要 判断x 是否能除尽 根号x 以内的素数
     function isPrime2 (x) { 
         var sqrt_n = Math.sqrt(n)
 
