--- a/css-font-text-practise.html
+++ b/css-font-text-practise.html
@@ -20,22 +20,25 @@
     body > h3 {
       font-size: 50px;
       color: white;
-      text-shadow: 
+      /* text-shadow: 
       1px 1px brown,
       -1px -1px brown,
       1px -1px brown,
-      -1px 1px brown;
+      -1px 1px brown; */
+      text-shadow: 0 0 1px red,0 0 1px red,0 0 1px red,0 0 1px red,0 0 1px red,0 0 1px red;
     }
     .b {
       font-size: 40px;
     }
     .b input {
-      font-size: 1em;
+      font-size: 1em; /* inherit也可以 */
+      text-transform: uppercase;
     }
 
     body h2 {
-      font-family: "Arial", "宋体", cursive, sans-serif;
+      font-family: "Times New Roman", "宋体", cursive, sans-serif;
     }
+
     .a {
       font-size: 30px;
       font-style: oblique;
@@ -85,7 +88,7 @@
   <p class="d">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, autem, ad. Quos fugit quam, vitae doloribus quo quisquam aut iure! Exercitationem ea in voluptatibus a, perspiciatis libero, eum quod? Et!</p>
 
   <p class="c">
-    <span>aa <span>bb <span>cc <span></span>dd</span></span></span>
+    <span>aa <span>bb <span>cc <span>dd</span></span></span></span>
   </p>
 
   <div class="f">
