--- a/noi.html
+++ b/noi.html
@@ -2370,7 +2370,7 @@ debugger
 
 </script>
 
-<script id="itob" xtype="OK">
+<script id="itob" type="OK">
     // 给定一个整数，将其转换为字符串：不能使用String等现成函数，但可以使用非此功能的其它函数
     // 也不能利用任意运算符的自动类型转换
     var n = +prompt("输入一个数")
@@ -2491,7 +2491,24 @@ debugger
 
 </script>
 
-<script id="sqrt" type="OK">
+<script id="sqrt" xtype="OK">
+    // 输入一个数，求它的平方根，精确到小数点后3位，不能使用Math.sqrt
+    // 用牛顿法
+    var num = +prompt("输入一个数")
+
+    function getSqrt (n) { 
+        var x = n
+        for (var i = 0; i < 10; i++) {
+            x = x / 2 + n / (2 * x)
+        }
+        return x.toFixed(3)
+    }
+
+    console.log(getSqrt(num))
+
+</script>
+
+<script id="sqrt2" type="OK">
     // 输入一个数，求它的平方根，精确到小数点后3位，不能使用Math.sqrt
     // 用牛顿法
     var num = +prompt("输入一个数")
@@ -2501,5 +2518,91 @@ debugger
     }
 
     console.log(getSqrt(num))
+
+</script>
+
+<script id="BeanCounting" type="OK">
+    
+    var char = prompt("输入字符串")
+    var char2 = prompt("输入要匹配的字符")
+
+    function countBs(str) {
+        var length = str.length
+        var cnt = 0
+
+        for (var i = 0; i < length; i++) {
+            if (str.charAt(i) == "B") {
+                cnt++
+            }
+        }
+
+        return cnt
+    }
+
+    function countBs2(str, c) {
+        return countChar(str, c)
+    }
+
+    function countChar(str, c) {
+        var length = str.length
+        var cnt = 0
+
+        for (var i = 0; i < length; i++) {
+            if (str.charAt(i) == c) {
+                cnt++
+            }
+        }
+
+        return cnt
+    }
+
+    console.log(countBs2(char, char2))
+    console.log(char[1])
+
+</script>
+
+<script id="ch0106/01" type="OK">
+    var num = +prompt("输入一个数")
+    var arr = []
+    var i
+
+    for (i = 0; i < n; i++) {
+        var num2 = +prompt("输入一个数")
+        arr.push(num2)
+    }
+
+    var num3 = +prompt("输入一个数")
+    var cnt = 0
+
+    for (i = 0; i < arr.length; i++) {
+        if (arr[i] == num3) {
+            cnt++
+        }
+    }
+
+    console.log(cnt)
+
+</script>
+
+<script id="ch0106/01" type="OK">
+    var num = +prompt("输入一个数")
+    var arr = []
+    var i
+
+    for (i = 0; i < n; i++) {
+        var num2 = +prompt("输入一个数")
+        arr.push(num2)
+    }
+
+    var num3 = +prompt("输入一个数")
+    var cnt = 0
+
+    for (i = 0; i < arr.length; i++) {
+        if (arr[i] == num3) {
+            cnt++
+        }
+    }
+
+    console.log(cnt)
 
 </script>
