css块元素布局，行内元素布局，squirrel提交

--- a/qq-mail.example.html
+++ b/qq-mail.example.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width">
   <title>JS Bin</title>
   <style>
+    html {
+        height: 100%;
+    }
     body {
         margin: 0; /* 移除默认的外边距 */
         padding: 0; /* 移除默认的内边距 */
@@ -23,19 +26,20 @@
         margin-right: auto;
         margin-bottom: 0px;
         overflow: auto;
-        height: calc(100vh - 120px);
+        height: calc(100% - 120px);
     }
     ul {
-        margin-top: 0px;
+        margin-top: 5px;
         margin-bottom: 0px;
-        height: 1158px;
+        height: 100%;
+        list-style: none;
     }
     .c {
         margin-left: 150px;
         margin-top: calc(-100vh + 120px);
         background-color: rgb(36, 206, 206);
-        height: calc(100vh - 120px);
-        overflow: auto;
+        height: calc(100% - 120px);
+        overflow: scroll;
     }
   </style>
 </head>
@@ -44,7 +48,7 @@
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, inventore commodi aliquid tenetur nostrum, cumque dolor fugiat iure harum ut eligendi recusandae amet laudantium, necessitatibus dicta ex molestiae modi hic veniam reiciendis pariatur eum beatae! Amet, quasi id libero a iure corporis quibusdam reiciendis tempore consectetur. Eum inventore ipsum suscipit nisi! Quia, asperiores consequatur assumenda magnam odit dolores perferendis. Nostrum cupiditate debitis totam beatae blanditiis hic! Maxime rerum eligendi quod repudiandae doloremque vel dolorem dolores consectetur, ipsa nesciunt. Nesciunt, animi doloremque. Amet officia voluptas nobis impedit dolore. At fugiat quam quaerat iure deserunt cumque doloremque explicabo, eos, rem optio culpa autem ab officiis ex dolorum magnam nobis modi, tempora aspernatur distinctio facere quo perferendis mollitia! Odio aspernatur tempora blanditiis et delectus possimus ad cupiditate quam, rerum doloribus deserunt odit sapiente quia pariatur iusto a amet eum perspiciatis corporis distinctio, commodi atque. Ut, omnis! Numquam aliquam nulla veritatis accusamus aperiam itaque incidunt laboriosam, dolor commodi! Recusandae quibusdam deserunt tenetur eum doloribus, sapiente quas officia rerum dolorum blanditiis cumque est beatae corrupti! Vitae tempora veniam earum beatae, saepe consequatur ullam commodi quis ratione inventore cupiditate officia, mollitia maiores modi illo. Reprehenderit cumque numquam dolores cupiditate fuga sapiente dolore recusandae illo asperiores soluta velit dolor, suscipit temporibus! Quasi laborum laudantium porro fugit nihil hic, architecto odit adipisci, enim, id illum? Impedit quam libero, voluptate consectetur deserunt dicta eius, ratione molestias distinctio est eligendi tenetur dolorum quisquam esse, molestiae sint! Eaque autem expedita a! Sint accusantium similique consequatur explicabo impedit deleniti, eaque adipisci pariatur. 
   </header>
 
-  <div class="b">
+  <aside class="b">
     <ul>
         <li>1</li>
         <li>2</li>
@@ -127,7 +131,7 @@
         <li>79</li>
         <li>80</li>
     </ul>
-  </div>
+  </aside>
 
   <main class="c">
     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat, recusandae? Possimus molestiae perferendis, voluptatum laborum cumque quidem alias non optio at odio praesentium placeat nihil, hic quibusdam ipsam ea similique natus suscipit cum? Voluptates accusamus necessitatibus provident nulla mollitia ut, aliquid deleniti eum totam ab nostrum, voluptate cupiditate. Omnis et, nisi dolorem eveniet non sit cumque alias necessitatibus illum voluptates iste perferendis numquam, magni perspiciatis incidunt asperiores totam modi est laborum repudiandae molestiae. Consequuntur nulla asperiores odit tempore nisi voluptas doloremque in laborum quibusdam, ipsum doloribus, neque quis iusto a. Dignissimos, illo. Illum eius aut corrupti ex autem! Aperiam, recusandae. Commodi fuga laudantium doloremque quam dolor modi quae perferendis quos eligendi. Ducimus non et reprehenderit, asperiores saepe minus suscipit porro rerum? Assumenda reprehenderit nesciunt, quo repudiandae ullam obcaecati ea? Voluptatem vel, ea impedit suscipit culpa numquam officiis laborum sed delectus nesciunt cumque eaque neque! Omnis tenetur sapiente eius et consequuntur cumque laborum vitae! Eos, amet perspiciatis temporibus hic facilis esse in voluptatum nulla a fugiat aut, id rerum quasi omnis animi repellendus provident numquam reprehenderit similique. Maiores blanditiis, commodi, accusamus dolor aperiam, velit dolore nisi ut quas reprehenderit explicabo quae? Fugiat temporibus dignissimos quo sapiente eos maxime architecto aperiam nam porro illo. Possimus cum incidunt aliquam pariatur ratione modi voluptas, enim animi, eligendi quibusdam quas, laborum fugiat voluptatem minima debitis maiores molestias vel temporibus? Labore, dolore, consectetur voluptas commodi explicabo dignissimos eligendi fugiat hic voluptatum quos itaque minus placeat aperiam nemo nulla nihil illo autem laboriosam pariatur, quae maxime similique fuga vel. Dolorem iusto quidem similique quaerat animi. Autem dolor deserunt voluptas quisquam perspiciatis est nihil eum consectetur quis ipsam saepe veniam, dicta amet reprehenderit? Sint ipsam sapiente quisquam expedita velit ex consequatur mollitia ipsa explicabo. Nisi quis quae hic sapiente deserunt libero esse optio eius, enim non voluptatibus reprehenderit earum cum illo labore perspiciatis officia nihil dignissimos aut magnam facere. Neque inventore aspernatur ab doloribus maxime sapiente quam quos tenetur? Ab porro officiis nostrum? Atque vel iure quibusdam expedita laudantium laborum quam fuga explicabo aperiam voluptas optio animi cumque commodi temporibus accusantium, nam voluptatum nihil dolores illum, voluptate repellat iste delectus nemo mollitia. Beatae dolorem architecto obcaecati ipsa quod dolores delectus, recusandae et deserunt ratione unde pariatur iste sed maxime ad error suscipit ea deleniti asperiores modi. Excepturi eum doloribus voluptates cum sunt numquam adipisci debitis quod, harum facilis culpa assumenda minima earum distinctio dolorum. Blanditiis id doloribus ab.
